[gd_scene load_steps=17 format=3 uid="uid://x5j00cx85cny"]

[ext_resource type="Script" path="res://scripts/scene/gamelobby.gd" id="1_1hssl"]
[ext_resource type="Texture2D" uid="uid://c1b0hbpj5v2jo" path="res://assets/textures/GameLobby/gamelobby.png" id="1_wunpk"]
[ext_resource type="Texture2D" uid="uid://0slyuxte5syd" path="res://assets/textures/GameLobby/tournament_normal.png" id="3_gqve1"]
[ext_resource type="PackedScene" uid="uid://vpacb0pr6l3x" path="res://scenes/ui/SettingButton.tscn" id="3_oh4bv"]
[ext_resource type="Texture2D" uid="uid://6pbs5delouov" path="res://assets/textures/GameLobby/ringgame_normal.png" id="3_t5u7n"]
[ext_resource type="PackedScene" uid="uid://ci651ib2roicr" path="res://scenes/ui/SaveButton.tscn" id="4_c0le3"]
[ext_resource type="Texture2D" uid="uid://mfking5x0lfa" path="res://assets/textures/GameLobby/ringgame_pressed.png" id="4_e617g"]
[ext_resource type="Texture2D" uid="uid://b084nulb1yk6c" path="res://assets/textures/GameLobby/tournament_pressed.png" id="4_feyng"]
[ext_resource type="Texture2D" uid="uid://bdw2r3l3yjd4b" path="res://assets/textures/GameLobby/ringgame_hover.png" id="5_drsdj"]
[ext_resource type="Texture2D" uid="uid://cv0nm2jdv7v7g" path="res://assets/textures/GameLobby/tournament_hover.png" id="5_oddqh"]
[ext_resource type="Texture2D" uid="uid://cheh1hp280y4v" path="res://assets/textures/GameLobby/1vs1_normal.png" id="6_8p6ln"]
[ext_resource type="Texture2D" uid="uid://p75d262ks4hx" path="res://assets/textures/GameLobby/tutorial_normal.png" id="6_88tm3"]
[ext_resource type="Texture2D" uid="uid://cb8qjfawqpin7" path="res://assets/textures/GameLobby/1vs1_pressed.png" id="7_0f8qf"]
[ext_resource type="Texture2D" uid="uid://roiwfvtgpdtc" path="res://assets/textures/GameLobby/tutorial_pressed.png" id="7_of612"]
[ext_resource type="Texture2D" uid="uid://n7esct2xvmmt" path="res://assets/textures/GameLobby/1vs1_hover.png" id="8_cfh8g"]
[ext_resource type="Texture2D" uid="uid://b14yo7pkdi5sj" path="res://assets/textures/GameLobby/tutorial_hover.png" id="8_t1mrb"]

[node name="GameLobby" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_1hssl")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_wunpk")

[node name="PlayerName" type="Label" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 24.0
offset_right = 208.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "プレイヤー名："

[node name="Chips" type="Label" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 78.0
offset_right = 208.0
offset_bottom = 120.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "チップ数："

[node name="TournamentButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 97.0
offset_right = 470.0
offset_bottom = 397.0
texture_normal = ExtResource("3_gqve1")
texture_pressed = ExtResource("4_feyng")
texture_hover = ExtResource("5_oddqh")

[node name="CounterButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 787.0
offset_top = 107.0
offset_right = 1187.0
offset_bottom = 407.0
texture_normal = ExtResource("6_88tm3")
texture_pressed = ExtResource("7_of612")
texture_hover = ExtResource("8_t1mrb")

[node name="RingGameTable" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 450.0
offset_right = 540.0
offset_bottom = 650.0
texture_normal = ExtResource("3_t5u7n")
texture_pressed = ExtResource("4_e617g")
texture_hover = ExtResource("5_drsdj")

[node name="VSTable" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 740.0
offset_top = 450.0
offset_right = 1040.0
offset_bottom = 650.0
texture_normal = ExtResource("6_8p6ln")
texture_pressed = ExtResource("7_0f8qf")
texture_hover = ExtResource("8_cfh8g")

[node name="SettingButton" parent="." instance=ExtResource("3_oh4bv")]
layout_mode = 1
offset_left = 1180.0
offset_top = 20.0
offset_right = 1180.0
offset_bottom = 20.0

[node name="SaveButton" parent="." instance=ExtResource("4_c0le3")]
layout_mode = 1
offset_left = 1080.0
offset_top = 20.0
offset_right = 1080.0
offset_bottom = 20.0
